--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     window.$docsify = {
       name: '',
       repo: '',
+	  // 搜索配置
+		search: {
+			maxAge: 86400000,
+			paths: 'auto',
+			placeholder: '搜索',
+			noData: '找不到结果',
+			depth: 4,
+			hideOtherSidebarContent: false,
+			namespace: '邓邓的零食橱'
+		},
 	  count:{
                 countable: true,
                 position: 'top',
@@ -36,5 +46,7 @@
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   <!-- 字数插件 -->
   <script src="https://cdn.jsdelivr.net/npm/docsify-count@latest/dist/countable.min.js"></script>
+  <!-- 搜索 -->
+   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 </body>
 </html>
