--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			noData: '找不到结果',
 			depth: 4,
 			hideOtherSidebarContent: false,
-			namespace: '邓邓的零食橱'
+			namespace: 'yue'
 		},
 	  count:{
                 countable: true,
@@ -56,13 +56,8 @@
 				},
 		
     }
-  </script>
-  
-    <!-- plugin：gitalk -->
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
-  <script>
-    const gitalk = new Gitalk({
+	
+	const gitalk = new Gitalk({
       clientID: 'Github Application Client ID',
       clientSecret: 'Github Application Client Secret',
       repo: 'Github repo',
@@ -72,13 +67,18 @@
       distractionFreeMode: false,
       id: decodeURI(window.location.pathname),
     })
+	
+	
+	src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js"
+		type="text/javascript">
   </script>
   
-	  <!-- switch between day and night -->
-	<script 
-		src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js"
-		type="text/javascript">
-	</script>
+    <!-- plugin：gitalk -->
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
+
+  
+	
 
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
