--- a/index.html
+++ b/index.html
@@ -9,59 +9,44 @@
   <meta name="keywords" content="玩">
   <meta name="author" content="岳士圣">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
-
 </head>
 <body>
-  <div id="app"></div>
-  <script>
-    window.$docsify = {
-      name: '',
-      repo: '',
-	  // 搜索配置
-		search: {
-			maxAge: 86400000,
-			paths: 'auto',
-			placeholder: '搜索',
-			noData: '找不到结果',
-			depth: 4,
-			hideOtherSidebarContent: false,
-			namespace: 'yue'
-		},
-	  count:{
-                countable: true,
-                position: 'top',
-                margin: '10px',
-                float: 'right',
-                fontsize:'0.9em',
-                color:'rgb(90,90,90)',
-                language:'chinese',
-                localization: {
-                    words: "",
-                    minute: ""
-                },
-                isExpected: true
-            },
-		
-    }
-	
-	
-
-  </script>
-  
-
-  <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-  <script src="//unpkg.com/prismjs/components/prism-bash.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-java.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-sql.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
-   <!-- click to copy -->
-   <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
-  <!-- 字数插件 -->
-  <script src="https://cdn.jsdelivr.net/npm/docsify-count@latest/dist/countable.min.js"></script>
-  <!-- 搜索 -->
-   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
-   <script src="//unpkg.com/docsify-copy-code"></script>
-
+<div id="app"></div>
+<script>
+  window.$docsify = {
+    name: '',
+    repo: '',
+    // 搜索配置
+    search: {
+      maxAge: 86400000,
+      paths: 'auto',
+      placeholder: '搜索',
+      noData: '找不到结果',
+      depth: 4,
+      hideOtherSidebarContent: false,
+      namespace: '邓邓的零食橱'
+    },
+    count:{
+      countable: true,
+      position: 'top',
+      margin: '10px',
+      float: 'right',
+      fontsize:'0.9em',
+      color:'rgb(90,90,90)',
+      language:'chinese',
+      localization: {
+        words: "",
+        minute: ""
+      },
+      isExpected: true
+    },
+  }
+</script>
+<!-- Docsify v4 -->
+<script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+<!-- 字数插件 -->
+<script src="https://cdn.jsdelivr.net/npm/docsify-count@latest/dist/countable.min.js"></script>
+<!-- 搜索 -->
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 </body>
 </html>
